--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="/style/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>Workshop DOM</title>
   </head>
   <body>
@@ -96,18 +96,18 @@
           <div class="card-body">
             <div class="card" style="width: 18rem">
               <img
-                src="/assets/baskets.png"
+                src="D:\Users\hp\Downloads\baskets.png"
                 class="card-img-top"
                 alt="baskets"
               />
               <div class="card-body">
                 <h5 class="card-title">Baskets</h5>
                 <p class="card-text">This is a basket</p>
-                <h4 class="unit-price">100 $</h4>
+                <h4 class="unit-price" id="unit-price">100 $</h4>
                 <div>
-                  <i class="fas fa-plus-circle"></i>
-                  <span class="quantity">0</span>
-                  <i class="fas fa-minus-circle"></i>
+                  <i class="fas fa-plus-circle" id="fa-plus-circle"></i>
+                  <span class="quantity" id="quantity">0</span>
+                  <i class="fas fa-minus-circle" id="fa-minus-circle"></i>
                 </div>
                 <div>
                   <i class="fas fa-trash-alt"></i>
@@ -120,15 +120,15 @@
 
           <div class="card-body">
             <div class="card" style="width: 18rem">
-              <img src="/assets/socks.png" class="card-img-top" alt="socks" />
+              <img src="D:\Users\hp\Downloads\socks.png" class="card-img-top" alt="socks" />
               <div class="card-body">
                 <h5 class="card-title">Socks</h5>
                 <p class="card-text">This is a socks</p>
-                <h4 class="unit-price">20 $</h4>
+                <h4 class="unit-price" id="unit-price">20 $</h4>
                 <div>
-                  <i class="fas fa-plus-circle"></i>
-                  <span class="quantity">0</span>
-                  <i class="fas fa-minus-circle"></i>
+                  <i class="fas fa-plus-circle" id="fa-plus-circle"></i>
+                  <span class="quantity" id="quantity">0</span>
+                  <i class="fas fa-minus-circle" id="fa-minus-circle"></i>
                 </div>
                 <div>
                   <i class="fas fa-trash-alt"></i>
@@ -140,19 +140,19 @@
           <!-- Product 3 : bag -->
           <div class="card-body">
             <div class="card" style="width: 18rem">
-              <img src="/assets/bag.png" class="card-img-top" alt="bag" />
+              <img src="D:\Users\hp\Downloads\bag.png" class="card-img-top" alt="bag" />
               <div class="card-body">
                 <h5 class="card-title">Bag</h5>
                 <p class="card-text">This is a Bag</p>
-                <h4 class="unit-price">50 $</h4>
+                <h4 class="unit-price" id="unit-price">50 $</h4>
                 <div>
-                  <i class="fas fa-plus-circle"></i>
-                  <span class="quantity">0</span>
-                  <i class="fas fa-minus-circle"></i>
+                  <i class="fas fa-plus-circle" id="fa-plus-circle"></i>
+                  <span class="quantity" id="quantity">0</span>
+                  <i class="fas fa-minus-circle" id="fa-minus-circle"></i>
                 </div>
                 <div>
                   <i class="fas fa-trash-alt"></i>
-                  <i class="fas fa-heart"></i>
+                  <i class="fas fa-heart active-heart"></i>
                 </div>
               </div>
             </div>
@@ -169,7 +169,8 @@
       crossorigin="anonymous"
     ></script>
 
-    <!-- My JS -->
-    <script src="/js/script.js"></script>
+      <!-- My JS -->
+      <script src="main.js"></script>
+
   </body>
 </html>
